--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="./app.js"></script>
 
   <body>
+      <div class="container">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -28,27 +29,30 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Link</a></li>
+            <li class="active"><a href="index.html">HOME <span class="sr-only">(current)</span></a></li>
+            <li><a href="about.html">ABOUT</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PRODUCT </a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">One more separated link</a></li>
+                <li><a href="side-table.html">SIDE TABLE</a></li>
+                <li><a href="audio-rack.html">AUDIO RACK</a></li>
+                <li><a href="drawers.html">DRAWERS</a></li>
+                  <li><a href="cofee-table.html">COFFEE TABLE</a></li>
+                    <li><a href="table.html">TABLE</a></li>
+                      <li><a href="customise.html">CUSTOMISE</a></li>
+
               </ul>
             </li>
-            <li><a href="#">Link</a></li>
+              <li><a href="project.html">PROJECT</a></li>
+            <li><a href="new.html">WHAT'S NEW</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
           </ul>
 
 
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
+  </div>
     <div class="slide">
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
@@ -81,18 +85,65 @@
 
 
  </div>
- <div>
-    </div>
+ </div>
+
     <!-- -->
   <div class="foot">
     <br>
+    <div class="row">
+        <div class="col-md-2">
+        </div>
 
-     <img src="img/logo.png"  class="logo" >
+        <div class="col-md-9">
+          <h4 class="tagline">"why settle for less when you can get the best from your homeland"</h4>
+        </div>
+      <div class="col-md-1">
+        <img src="img/logo.png"  class="logo" >
+      </div>
+    </div>
 
-       <h4 style="text-align:right; text-transform:uppercase; position:relative; top:30% ">"why settle for less when you can get the best from your homeland"</h4>
-  <br>
+
+
+
   </div>
-</div>
+    <br>
+      <br>
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2">
+          <h5 style="color:#000"><a href="index.html"  style="color:#000">HOME</a></h5>
+        </div>
+        <div class="col-md-2">
+          <h5 style="color:#000"><a href="about.html"  style="color:#000">ABOUT</a></h5>
+        </div>
+        <div class="col-md-2" >
+          <h5 style="color:#000">PRODUCT</h5>
+          <ul style="list-style: none; padding-left:0px;" class="bottom-list">
+            <li><a href="side-table.html">SIDE TABLE</a></li>
+            <li><a href="audio-rack.html">AUDIO RACK</a></li>
+            <li><a href="drawers.html">DRAWERS</a></li>
+              <li><a href="cofee-table.html">COFFEE TABLE</a></li>
+                <li><a href="table.html">TABLE</a></li>
+                  <li><a href="customise.html">CUSTOMISE</a></li>
+              </ul>
+        </div>
+        <div class="col-md-2">
+          <h5 style="color:#000"><a href="project.html"  style="color:#000">PROJECT</a></h5>
+        </div>
+        <div class="col-md-2">
+        <h5 style="color:#000"><a href="new.html"  style="color:#000">WHAT'S NEW</a></h5>
+      </div>
+        <div class="col-md-2">
+          <h5 style="color:#000"><a href="contact.html"  style="color:#000">CONTACT</a></h5>
+        </div>
+      </div>
+      <br>
+      <center><a style="color:#9E9E9E;">© 2015 indowoodgarage.com</a>
+        <br>
+    </div>
+  </div>
+
   </body>
 
 </html>
