--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li ><a href="index.html">HOME <span class="sr-only">(current)</span></a></li>
-            <li><a href="about.html">ABOUT</a></li>
+            <li class="active"><a href="about.html">ABOUT</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PRODUCT </a>
               <ul class="dropdown-menu">
@@ -43,8 +43,8 @@
 
               </ul>
             </li>
-              <li><a href="project.html">PROJECT</a></li>
-            <li  class="active"><a href="new.html">WHAT'S NEW</a></li>
+              <li ><a href="project.html">PROJECT</a></li>
+            <li><a href="new.html">WHAT'S NEW</a></li>
               <li><a href="contact.html">CONTACT</a></li>
           </ul>
 
@@ -53,30 +53,13 @@
       </div><!-- /.container-fluid -->
     </nav>
   </div>
-
+  <br>
     <div class="slide" style="background:#e6e6e6;">
+      <img src="img/custom-project-img1.jpg" width="100%">
       <br>
-      <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-              <div  class="new1"></div>
-              <p style="color:#777575">LA Madame Florist @ Ruko Cordoba PIK</p>
-            </div>
-            <div class="col-md-4">
-              <div  class="new2"></div>
-              <p style="color:#777575">Yellow Hammers @ Ruko Singaraja LIPPO <br>
-CIKARANG pt 2</p>
-              </div>
-              <div class="col-md-4">
-                <div  class="new3"></div>
-                <p style="color:#777575">Yellow Hammers @ Ruko Singaraja LIPPO <br>
-CIKARANG pt 1</p>
 
-                </div>
-        </div>
-      </div>
-      <br>
  </div>
+ <!-- <span style="font-size: 1.5em;color: black;margin-left:10px;"><a style="text-decoration:none;color: black;"href="project.html">PROJECT </a>/ <a style="text-decoration:none;color: black;"href="past-project.html">Past Project </a>/ Custom Project</span> -->
 <br><br>
     <!-- -->
     <div class="foot">
@@ -97,6 +80,7 @@ CIKARANG pt 1</p>
 
 
     </div>
+
     <br>
       <br>
       <div class="footer">
