--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
     <!-- -->
   <div class="foot">
     <br>
-    <div class="row">
+    <div class="row" style="width:100%">
         <div class="col-md-2">
         </div>
 
         <div class="col-md-9">
           <h4 class="tagline">"why settle for less when you can get the best from your homeland"</h4>
         </div>
-      <div class="col-md-1">
+      <div class="col-md-1" style="padding-left:0px;">
         <img src="img/logo.png"  class="logo" >
       </div>
     </div>
