--- a/past-project.html
+++ b/past-project.html
@@ -53,7 +53,7 @@
       </div><!-- /.container-fluid -->
     </nav>
   </div>
-  <br><br>
+  
     <div class="slide" style="background:#e6e6e6;">
       <br>
       <div class="container">
@@ -67,6 +67,8 @@
                 <a href="custom-project.html">  <img src="img/custom-project.png" width="100%"></a>
 
                 </div>
+                <div class="col-md-1">
+                </div>
         </div>
       </div>
       <br>
@@ -74,24 +76,24 @@
  <span style="font-size: 1.5em;color: black;margin-left:10px;"><a style="text-decoration:none;color: black;"href="project.html">PROJECT </a>/ Past Project</span>
 <br><br>
     <!-- -->
-  <div class="foot">
-    <br>
-    <div class="row">
-        <div class="col-md-2">
-        </div>
+    <div class="foot">
+      <br>
+      <div class="row" style="width:100%">
+          <div class="col-md-2">
+          </div>
 
-        <div class="col-md-9">
-          <h4 class="tagline">"why settle for less when you can get the best from your homeland"</h4>
+          <div class="col-md-9">
+            <h4 class="tagline">"why settle for less when you can get the best from your homeland"</h4>
+          </div>
+        <div class="col-md-1" style="padding-left:0px;">
+          <img src="img/logo.png"  class="logo" >
         </div>
-      <div class="col-md-1">
-        <img src="img/logo.png"  class="logo" >
       </div>
+
+
+
+
     </div>
-
-
-
-
-  </div>
 
     <br>
       <br>
