--- a/custom-project.html
+++ b/custom-project.html
@@ -63,24 +63,24 @@
  <span style="font-size: 1.5em;color: black;margin-left:10px;"><a style="text-decoration:none;color: black;"href="project.html">PROJECT </a>/ <a style="text-decoration:none;color: black;"href="past-project.html">Past Project </a>/ Custom Project</span>
 <br><br>
     <!-- -->
-  <div class="foot">
-    <br>
-    <div class="row">
-        <div class="col-md-2">
-        </div>
+    <div class="foot">
+      <br>
+      <div class="row" style="width:100%">
+          <div class="col-md-2">
+          </div>
 
-        <div class="col-md-9">
-          <h4 class="tagline">"why settle for less when you can get the best from your homeland"</h4>
+          <div class="col-md-9">
+            <h4 class="tagline">"why settle for less when you can get the best from your homeland"</h4>
+          </div>
+        <div class="col-md-1" style="padding-left:0px;">
+          <img src="img/logo.png"  class="logo" >
         </div>
-      <div class="col-md-1">
-        <img src="img/logo.png"  class="logo" >
       </div>
+
+
+
+
     </div>
-
-
-
-
-  </div>
 
     <br>
       <br>
