--- a/project.html
+++ b/project.html
@@ -53,7 +53,7 @@
       </div><!-- /.container-fluid -->
     </nav>
   </div>
-  <br>
+
     <div class="slide" style="background:#e6e6e6;">
       <br>
       <div class="container">
@@ -73,24 +73,24 @@
  </div>
 <br><br>
     <!-- -->
-  <div class="foot">
-    <br>
-    <div class="row">
-        <div class="col-md-2">
-        </div>
+    <div class="foot">
+      <br>
+      <div class="row" style="width:100%">
+          <div class="col-md-2">
+          </div>
 
-        <div class="col-md-9">
-          <h4 class="tagline">"why settle for less when you can get the best from your homeland"</h4>
+          <div class="col-md-9">
+            <h4 class="tagline">"why settle for less when you can get the best from your homeland"</h4>
+          </div>
+        <div class="col-md-1" style="padding-left:0px;">
+          <img src="img/logo.png"  class="logo" >
         </div>
-      <div class="col-md-1">
-        <img src="img/logo.png"  class="logo" >
       </div>
+
+
+
+
     </div>
-
-
-
-
-  </div>
     <br>
       <br>
       <div class="footer">
