--- a/new.html
+++ b/new.html
@@ -57,6 +57,7 @@
     <div class="slide" style="background:#e6e6e6;">
       <br>
       <div class="container">
+        <h2>WHAT'S NEW</h2>
         <div class="row">
             <div class="col-md-4">
               <div  class="new1"></div>
