--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,7 @@
 
 <body>
 <br><br>
-<center><img src="img/logo.png" width="30%"></center>
+<center><h1>coming Soon..........</h1></center>
 
 </body>
 
