--- a/side-table.html
+++ b/side-table.html
@@ -112,7 +112,7 @@
             <div class="row">
                 <div class="col-md-4">
 
-                		<img src='zoom-master/daisy.jpg' width='100%'  height="200px"/>
+                		<img src='img/new1.jpg' width='100%'  height="200px"/>
 
                   <div class="desc">
                   <h5 ><a href="side-table-detail.html">lorem ipsum</a></h5>
@@ -122,7 +122,7 @@
                 </div>
                 <div class="col-md-4">
 
-                		<img src='zoom-master/daisy.jpg' width='100%'  height="200px"/>
+                			<img src='img/new1.jpg' width='100%'  height="200px"/>
 
                   <div class="desc">
                   <h5>lorem ipsum</h5>
@@ -132,7 +132,7 @@
                 </div>
                 <div class="col-md-4">
 
-                		<img src='zoom-master/daisy.jpg' width='100%'  height="200px"/>
+                				<img src='img/new1.jpg' width='100%'  height="200px"/>
 
                   <div class="desc">
                   <h5>lorem ipsum</h5>
@@ -144,7 +144,7 @@
             <div class="row">
               <div class="col-md-4">
 
-                  <img src='zoom-master/daisy.jpg' width='100%'  height="200px"/>
+                		<img src='img/new1.jpg' width='100%'  height="200px"/>
 
                 <div class="desc">
                 <h5>lorem ipsum</h5>
@@ -154,8 +154,7 @@
               </div>
               <div class="col-md-4">
 
-                  <img src='zoom-master/daisy.jpg' width='100%'  height="200px"/>
-
+                		<img src='img/new1.jpg' width='100%'  height="200px"/>
                 <div class="desc">
                 <h5>lorem ipsum</h5>
                 <p>lorem ipsum</p>
@@ -164,7 +163,7 @@
               </div>
               <div class="col-md-4">
 
-                  <img src='zoom-master/daisy.jpg' width='100%'  height="200px"/>
+              		<img src='img/new1.jpg' width='100%'  height="200px"/>
 
                 <div class="desc">
                 <h5>lorem ipsum</h5>
