change font family

--- a/how-to-create.html
+++ b/how-to-create.html
@@ -125,7 +125,7 @@
             </div>
           </div>
           <br>
-          <center><a style="color:#9E9E9E;">© 2015 indowoodgarage.com</a>
+          <center><a style="color:#9E9E9E;">&copy;2015 indowoodgarage.com</a>
             <br>
         </div>
       </div>
