--- a/past-project.html
+++ b/past-project.html
@@ -53,7 +53,7 @@
       </div><!-- /.container-fluid -->
     </nav>
   </div>
-  
+
     <div class="slide" style="background:#e6e6e6;">
       <br>
       <div class="container">
@@ -128,7 +128,7 @@
             </div>
           </div>
           <br>
-          <center><a style="color:#9E9E9E;">© 2015 indowoodgarage.com</a>
+          <center><a style="color:#9E9E9E;">&copy;2015 indowoodgarage.com</a>
             <br>
         </div>
       </div>
