--- a/side-table.html
+++ b/side-table.html
@@ -108,15 +108,15 @@
                     <li><a href="customise.html">CUSTOMISE</a></li>
                 </ul>
           </div>
-          <div class="col-md-8">
+          <div class="col-md-8" style="border-left:2px solid #ffd200; padding-left:30px;">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4" >
 
                 		<img src='img/new1.jpg' width='100%'  height="200px"/>
 
                   <div class="desc">
-                  <h5 ><a href="side-table-detail.html">lorem ipsum</a></h5>
-                  <p>lorem ipsum</p>
+                  <h4 ><a style="color:grey"href="side-table-detail.html">lorem ipsum</a></h4>
+                  <p style="color:grey">lorem ipsum</p>
                 </div>
 
                 </div>
@@ -125,8 +125,8 @@
                 			<img src='img/new1.jpg' width='100%'  height="200px"/>
 
                   <div class="desc">
-                  <h5>lorem ipsum</h5>
-                  <p>lorem ipsum</p>
+                    <h4 ><a style="color:grey"href="side-table-detail.html">lorem ipsum</a></h4>
+                    <p style="color:grey">lorem ipsum</p>
                 </div>
 
                 </div>
@@ -135,8 +135,8 @@
                 				<img src='img/new1.jpg' width='100%'  height="200px"/>
 
                   <div class="desc">
-                  <h5>lorem ipsum</h5>
-                  <p>lorem ipsum</p>
+                    <h4 ><a style="color:grey"href="side-table-detail.html">lorem ipsum</a></h4>
+                    <p style="color:grey">lorem ipsum</p>
                 </div>
 
                 </div>
@@ -147,8 +147,8 @@
                 		<img src='img/new1.jpg' width='100%'  height="200px"/>
 
                 <div class="desc">
-                <h5>lorem ipsum</h5>
-                <p>lorem ipsum</p>
+                  <h4 ><a style="color:grey"href="side-table-detail.html">lorem ipsum</a></h4>
+                  <p style="color:grey">lorem ipsum</p>
               </div>
 
               </div>
@@ -156,8 +156,8 @@
 
                 		<img src='img/new1.jpg' width='100%'  height="200px"/>
                 <div class="desc">
-                <h5>lorem ipsum</h5>
-                <p>lorem ipsum</p>
+                  <h4 ><a style="color:grey"href="side-table-detail.html">lorem ipsum</a></h4>
+                  <p style="color:grey">lorem ipsum</p>
               </div>
 
               </div>
@@ -166,8 +166,8 @@
               		<img src='img/new1.jpg' width='100%'  height="200px"/>
 
                 <div class="desc">
-                <h5>lorem ipsum</h5>
-                <p>lorem ipsum</p>
+                  <h4 ><a style="color:grey"href="side-table-detail.html">lorem ipsum</a></h4>
+                  <p style="color:grey">lorem ipsum</p>
               </div>
 
               </div>
@@ -234,7 +234,7 @@
             </div>
           </div>
           <br>
-          <center><a style="color:#9E9E9E;">© 2015 indowoodgarage.com</a>
+          <center><a style="color:#9E9E9E;">&copy;2015 indowoodgarage.com</a>
             <br>
         </div>
       </div>
