--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
       </div>
       <br>
-      <center><a style="color:#9E9E9E;">© 2015 indowoodgarage.com</a>
+      <center><a style="color:#9E9E9E;">&copy;2015 indowoodgarage.com</a>
         <br>
     </div>
   </div>
