--- a/new.html
+++ b/new.html
@@ -131,7 +131,7 @@ CIKARANG pt 1</p>
             </div>
           </div>
           <br>
-          <center><a style="color:#9E9E9E;">© 2015 indowoodgarage.com</a>
+          <center><a style="color:#9E9E9E;">&copy;2015 indowoodgarage.com</a>
             <br>
         </div>
       </div>
