--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
               </ul>
             </li>
               <li ><a href="project.html">PROJECT</a></li>
-            <li><a href="new.html">WHAT'S NEW</a></li>
+            <li><a href="new.html">WHAT NEWS</a></li>
               <li><a href="contact.html">CONTACT</a></li>
           </ul>
 
@@ -56,7 +56,7 @@
     <div class="slide" style="background:#e6e6e6;">
       <img src="img/custom-project-img1.jpg" width="100%">
       <center><h3>INDOWOOD</h3>
-          <p style="width:50%;">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+          <p class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
           <br>
       </center>
 
@@ -71,7 +71,7 @@
           </div>
 
           <div class="col-md-9">
-            <h4 class="tagline">"why settle for less when you can get the best from your homeland"</h4>
+            <h3 class="tagline">"why settle for less when you can get the best from your homeland"</h3>
           </div>
         <div class="col-md-1" style="padding-left:0px;">
           <img src="img/logo.png"  class="logo" >
@@ -89,10 +89,10 @@
         <div class="container">
           <div class="row">
             <div class="col-md-2">
-              <h5 style="color:#000"><a href="index.html"  style="color:#000">HOME</a></h5>
+              <h5 style="color:#000"><a href="index.html"  style="color:#000;font-size: 1.1em;">HOME</a></h5>
             </div>
             <div class="col-md-2">
-              <h5 style="color:#000"><a href="about.html"  style="color:#000">ABOUT</a></h5>
+              <h5 style="color:#000"><a href="about.html"  style="color:#000;font-size: 1.1em;">ABOUT</a></h5>
             </div>
             <div class="col-md-2" >
               <h5 style="color:#000">PRODUCT</h5>
@@ -106,13 +106,13 @@
                   </ul>
             </div>
             <div class="col-md-2">
-              <h5 style="color:#000"><a href="project.html"  style="color:#000">PROJECT</a></h5>
+              <h5 style="color:#000"><a href="project.html"  style="color:#000;font-size: 1.1em;">PROJECT</a></h5>
             </div>
             <div class="col-md-2">
-            <h5 style="color:#000"><a href="new.html"  style="color:#000">WHAT'S NEW</a></h5>
+            <h5 style="color:#000"><a href="new.html"  style="color:#000;font-size: 1.1em;">WHAT NEWS</a></h5>
           </div>
             <div class="col-md-2">
-              <h5 style="color:#000"><a href="contact.html"  style="color:#000">CONTACT</a></h5>
+              <h5 style="color:#000"><a href="contact.html"  style="color:#000;font-size: 1.1em;">CONTACT</a></h5>
             </div>
           </div>
           <br>
