--- a/how-to-create.html
+++ b/how-to-create.html
@@ -44,7 +44,7 @@
               </ul>
             </li>
               <li class="active"><a href="project.html">PROJECT</a></li>
-            <li><a href="new.html">WHAT'S NEW</a></li>
+            <li><a href="new.html">WHAT NEWS</a></li>
               <li><a href="contact.html">CONTACT</a></li>
           </ul>
 
@@ -81,7 +81,7 @@
           </div>
 
           <div class="col-md-9">
-            <h4 class="tagline">"why settle for less when you can get the best from your homeland"</h4>
+            <h3 class="tagline">"why settle for less when you can get the best from your homeland"</h3>
           </div>
         <div class="col-md-1" style="padding-left:0px;">
           <img src="img/logo.png"  class="logo" >
@@ -118,7 +118,7 @@
               <h5 style="color:#000"><a href="project.html"  style="color:#000">PROJECT</a></h5>
             </div>
             <div class="col-md-2">
-            <h5 style="color:#000"><a href="new.html"  style="color:#000">WHAT'S NEW</a></h5>
+            <h5 style="color:#000"><a href="new.html"  style="color:#000">WHAT NEWS</a></h5>
           </div>
             <div class="col-md-2">
               <h5 style="color:#000"><a href="contact.html"  style="color:#000">CONTACT</a></h5>
