--- a/new.html
+++ b/new.html
@@ -44,7 +44,7 @@
               </ul>
             </li>
               <li><a href="project.html">PROJECT</a></li>
-            <li  class="active"><a href="new.html">WHAT'S NEW</a></li>
+            <li  class="active"><a href="new.html">WHAT NEWS</a></li>
               <li><a href="contact.html">CONTACT</a></li>
           </ul>
 
@@ -57,7 +57,7 @@
     <div class="slide" style="background:#e6e6e6;">
       <br>
       <div class="container">
-        <h2>WHAT'S NEW</h2>
+        <h2>WHAT NEWS</h2>
         <div class="row">
             <div class="col-md-4">
               <div  class="new1"></div>
@@ -87,7 +87,7 @@ CIKARANG pt 1</p>
           </div>
 
           <div class="col-md-9">
-            <h4 class="tagline">"why settle for less when you can get the best from your homeland"</h4>
+            <h3 class="tagline">"why settle for less when you can get the best from your homeland"</h3>
           </div>
         <div class="col-md-1" style="padding-left:0px;">
           <img src="img/logo.png"  class="logo" >
@@ -104,13 +104,13 @@ CIKARANG pt 1</p>
         <div class="container">
           <div class="row">
             <div class="col-md-2">
-              <h5 style="color:#000"><a href="index.html"  style="color:#000">HOME</a></h5>
+              <h5 style="color:#000;font-size: 1.1em;"><a href="index.html"  style="color:#000;font-size: 1.1em;">HOME</a></h5>
             </div>
             <div class="col-md-2">
-              <h5 style="color:#000"><a href="about.html"  style="color:#000">ABOUT</a></h5>
+              <h5 style="color:#000;font-size: 1.1em;"><a href="about.html"  style="color:#000;font-size: 1.1em;">ABOUT</a></h5>
             </div>
             <div class="col-md-2" >
-              <h5 style="color:#000">PRODUCT</h5>
+              <h5 style="color:#000;font-size: 1.1em;">PRODUCT</h5>
               <ul style="list-style: none; padding-left:0px;" class="bottom-list">
                 <li><a href="side-table.html">SIDE TABLE</a></li>
                 <li><a href="audio-rack.html">AUDIO RACK</a></li>
@@ -121,13 +121,13 @@ CIKARANG pt 1</p>
                   </ul>
             </div>
             <div class="col-md-2">
-              <h5 style="color:#000"><a href="project.html"  style="color:#000">PROJECT</a></h5>
+              <h5 style="color:#000;font-size: 1.1em;"><a href="project.html"  style="color:#000;font-size: 1.1em;">PROJECT</a></h5>
             </div>
             <div class="col-md-2">
-            <h5 style="color:#000"><a href="new.html"  style="color:#000">WHAT'S NEW</a></h5>
+            <h5 style="color:#000;font-size: 1.1em;"><a href="new.html"  style="color:#000;font-size: 1.1em;">WHAT NEWS</a></h5>
           </div>
             <div class="col-md-2">
-              <h5 style="color:#000"><a href="contact.html"  style="color:#000">CONTACT</a></h5>
+              <h5 style="color:#000;font-size: 1.1em;"><a href="contact.html"  style="color:#000;font-size: 1.1em;">CONTACT</a></h5>
             </div>
           </div>
           <br>
