--- a/past-project.html
+++ b/past-project.html
@@ -44,7 +44,7 @@
               </ul>
             </li>
               <li class="active"><a href="project.html">PROJECT</a></li>
-            <li><a href="new.html">WHAT'S NEW</a></li>
+            <li><a href="new.html">WHAT NEWS</a></li>
               <li><a href="contact.html">CONTACT</a></li>
           </ul>
 
@@ -83,7 +83,7 @@
           </div>
 
           <div class="col-md-9">
-            <h4 class="tagline">"why settle for less when you can get the best from your homeland"</h4>
+            <h3 class="tagline">"why settle for less when you can get the best from your homeland"</h3>
           </div>
         <div class="col-md-1" style="padding-left:0px;">
           <img src="img/logo.png"  class="logo" >
@@ -101,13 +101,13 @@
         <div class="container">
           <div class="row">
             <div class="col-md-2">
-              <h5 style="color:#000"><a href="index.html"  style="color:#000">HOME</a></h5>
+              <h5 style="color:#000;font-size: 1.1em;"><a href="index.html"  style="color:#000;font-size: 1.1em;">HOME</a></h5>
             </div>
             <div class="col-md-2">
-              <h5 style="color:#000"><a href="about.html"  style="color:#000">ABOUT</a></h5>
+              <h5 style="color:#000;font-size: 1.1em;"><a href="about.html"  style="color:#000;font-size: 1.1em;">ABOUT</a></h5>
             </div>
             <div class="col-md-2" >
-              <h5 style="color:#000">PRODUCT</h5>
+              <h5 style="color:#000;font-size: 1.1em;">PRODUCT</h5>
               <ul style="list-style: none; padding-left:0px;" class="bottom-list">
                 <li><a href="side-table.html">SIDE TABLE</a></li>
                 <li><a href="audio-rack.html">AUDIO RACK</a></li>
@@ -118,13 +118,13 @@
                   </ul>
             </div>
             <div class="col-md-2">
-              <h5 style="color:#000"><a href="project.html"  style="color:#000">PROJECT</a></h5>
+              <h5 style="color:#000;font-size: 1.1em;"><a href="project.html"  style="color:#000;font-size: 1.1em;">PROJECT</a></h5>
             </div>
             <div class="col-md-2">
-            <h5 style="color:#000"><a href="new.html"  style="color:#000">WHAT'S NEW</a></h5>
+            <h5 style="color:#000;font-size: 1.1em;"><a href="new.html"  style="color:#000;font-size: 1.1em;">WHAT NEWS</a></h5>
           </div>
             <div class="col-md-2">
-              <h5 style="color:#000"><a href="contact.html"  style="color:#000">CONTACT</a></h5>
+              <h5 style="color:#000;font-size: 1.1em;"><a href="contact.html"  style="color:#000;font-size: 1.1em;">CONTACT</a></h5>
             </div>
           </div>
           <br>
