--- a/past-project.html
+++ b/past-project.html
@@ -73,7 +73,7 @@
       </div>
       <br>
  </div>
- <span style="font-size: 1.5em;color: black;margin-left:10px;"><a style="text-decoration:none;color: black;"href="project.html">PROJECT </a>/ Past Project</span>
+ <span style="font-size: 1.5em;color: black;margin-left:10px;"><a style="text-decoration:none;color: black;"href="project.html">PROJECT </a>/ <a>Past Project</a></span>
 <br><br>
     <!-- -->
     <div class="foot">
