--- a/side-table-detail.html
+++ b/side-table-detail.html
@@ -111,7 +111,7 @@
           <div class="col-md-8">
             <div class="row">
                 <div class="col-md-6">
-                  <span style="font-size: 1.3em; margin-bottom:10px;"><a href="side-table.html">Side Table</a> / Side Table 1</span>
+                  <span style="font-size: 1.3em; margin-bottom:10px;"><a href="side-table.html">Side Table</a> / <a>Side Table 1</a></span>
 
                   <span class='zoom' id='ex1'>
                 		<img src='zoom-master/daisy.jpg' width='100%' height="400px"/>
