--- a/custom-project.html
+++ b/custom-project.html
@@ -56,11 +56,13 @@
   <br>
     <div class="slide" style="background:#e6e6e6;">
       <img src="img/custom-project-img1.jpg" width="100%">
-      <br>  <br>
+      <br><br><div class="container"><p class="about" style="text-align:center; margin:auto;">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>  <br>
+</div>
       <img src="img/custom-project-img1.jpg" width="100%">
 
  </div>
- <span style="font-size: 1.5em;color: black;margin-left:10px;"><a style="text-decoration:none;color: black;"href="project.html">PROJECT </a>/ <a style="text-decoration:none;color: black;"href="past-project.html">Past Project </a>/ Custom Project</span>
+ <span style="font-size: 1.5em;color: black;margin-left:10px;"><a style="text-decoration:none;color: black;"href="project.html">PROJECT </a>/ <a style="text-decoration:none;color: black;"href="past-project.html">Past Project </a><a>/ Custom Project</a></span>
 <br><br>
     <!-- -->
     <div class="foot">
@@ -89,7 +91,7 @@
           <div class="row">
             <div class="col-md-2">
               <h5 style="color:#000"><a href="index.html"  style="color:#000;font-size: 1.1em;">HOME</a></h5>
-            </div>style="color:#000;font-size: 1.1em;"
+            </div>
             <div class="col-md-2">
               <h5 style="color:#000;font-size: 1.1em;"><a href="about.html"  style="color:#000;font-size: 1.1em;">ABOUT</a></h5>
             </div>
@@ -112,7 +114,7 @@
           </div>
             <div class="col-md-2">
               <h5 style="color:#000;font-size: 1.1em;"><a href="contact.html"  style="color:#000;font-size: 1.1em;">CONTACT</a></h5>
-            </div>style="color:#000;font-size: 1.1em;"
+            </div>
           </div>
           <br>
           <center><a style="color:#9E9E9E;">&copy;2015 indowoodgarage.com</a>
